chore: fix dependency and plugin placements. (#18)